Fix: overflow of post img on large screen and responsiveness on medium screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,12 +230,12 @@ input#id_image {
 
     .post-img {
         max-height: 450px;
-        width: 670px;
+        width: 100%;
     }
 
     .img.card-img-top.post-img {
         max-height: 450px;
-        max-width: 670px;
+        max-width: 100%;
     }
 
     .post-title-author {
